[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
sqlx = { version = "0.5.1", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono", "json"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
jsonwebtoken = "7.2"
env_logger = "0.8"
log = "0.4"
